--- a/.gitignore
+++ b/.gitignore
@@ -100,5 +100,5 @@ crashlytics-build.properties
 # If the source bank files are kept outside of the StreamingAssets folder then these can be ignored.
 # Log files can be ignored.
 fmod_editor.log
-GMTK2022/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
-GMTK2022/Assets/Plugins/FMOD/Resources/FMODStudioSettings.asset
+Detective.1.0/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+Detective.1.0/Assets/Plugins/FMOD/Resources/FMODStudioSettings.asset
