--- a/.gitignore
+++ b/.gitignore
@@ -91,7 +91,7 @@ crashlytics-build.properties
 ![Aa]ssets/Editor Default Resources/FMOD/*
                     
 # Ignore the Cache folder since it is updated locally.
-[Aa]ssets/Plugins/FMOD/Cache/*
+[Aa]ssets/Plugins/FMOD/Cache/**
                     
 # Ignore bank files in the StreamingAssets folder.
 [Aa]ssets/StreamingAssets/**/*.bank
