--- a/.gitignore
+++ b/.gitignore
@@ -93,10 +93,10 @@ crashlytics-build.properties
 # Ignore the Cache folder since it is updated locally.
 [Aa]ssets/Plugins/FMOD/Cache/*
 [Aa]ssets/Plugins/FMOD/Cache.meta
-/[Aa]ssets/**/FMODStudioCache.asset
-/[Aa]ssets/**/FMODStudioCache.asset.meta
-/[Aa]ssets/Plugins/FMOD/Cache.meta
-/[Aa]ssets/Plugins/FMOD/Cache/Editor.meta
+[Aa]ssets/**/FMODStudioCache.asset
+[Aa]ssets/**/FMODStudioCache.asset.meta
+[Aa]ssets/Plugins/FMOD/Cache.meta
+[Aa]ssets/Plugins/FMOD/Cache/Editor.meta
                     
 # Ignore bank files in the StreamingAssets folder.
 [Aa]ssets/StreamingAssets/**/*.bank
