--- a/.gitignore
+++ b/.gitignore
@@ -106,4 +106,6 @@ crashlytics-build.properties
 # Log files can be ignored.
 fmod_editor.log
 Detective.1.0/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+Detective.1.0/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
 Detective.1.0/Assets/Plugins/FMOD/Resources/FMODStudioSettings.asset
+Detective.1.0/Assets/Plugins/FMOD/Resources/FMODStudioSettings.asset.meta
