--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,5 @@ Detective.1.0/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 Detective.1.0/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
 Detective.1.0/Assets/Plugins/FMOD/Resources/FMODStudioSettings.asset
 Detective.1.0/Assets/Plugins/FMOD/Resources/FMODStudioSettings.asset.meta
+Detective.1.0/Assets/Plugins/FMOD/Cache.meta
+Detective.1.0/Assets/Plugins/FMOD/Cache/Editor.meta
