--- a/.gitignore
+++ b/.gitignore
@@ -100,9 +100,9 @@ crashlytics-build.properties
 # If the source bank files are kept outside of the StreamingAssets folder then these can be ignored.
 # Log files can be ignored.
 fmod_editor.log
-Detective.1.0/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
-Detective.1.0/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
-Detective.1.0/Assets/Plugins/FMOD/Resources/FMODStudioSettings.asset
-Detective.1.0/Assets/Plugins/FMOD/Resources/FMODStudioSettings.asset.meta
-Detective.1.0/Assets/Plugins/FMOD/Cache.meta
-Detective.1.0/Assets/Plugins/FMOD/Cache/Editor.meta
+# Detective.1.0/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+# Detective.1.0/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
+# Detective.1.0/Assets/Plugins/FMOD/Resources/FMODStudioSettings.asset
+# Detective.1.0/Assets/Plugins/FMOD/Resources/FMODStudioSettings.asset.meta
+# Detective.1.0/Assets/Plugins/FMOD/Cache.meta
+# Detective.1.0/Assets/Plugins/FMOD/Cache/Editor.meta
